# DRSS-2022-MITM

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md
attack-clients/simple-mitm/: hexdump.h  interlocking_simulator.cxx  signal_simulator.cxx
rasta-wrapper/: hexdump.h  rasta_handle_wrapper.h  rasta_wrapper.cpp  rasta_wrapper.h
sci-ls-wrapper/: sci_ls_wrapper.cpp  sci_ls_wrapper.h
